Fixed issue in style.css where horn button clickable area was too large

--- a/public/style.css
+++ b/public/style.css
@@ -59,6 +59,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     margin-bottom: 3rem;
 }
@@ -106,6 +107,7 @@ textarea {
     border-radius: 50%;
     background: none;
     border: none;
+    width: 100px;
 }
 
 #hornBtn:hover {
